--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "import-leads-api",
+  "name": "loan-api",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Rey Nick",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
